# Rava

./: .gitignore  Cargo.toml  README.md  hello.txt  justfile
.github/workflows/: ci.yml  release.yml
crates/aot/: Cargo.toml
crates/aot/src/: backend.rs  compiler.rs  lib.rs  pass.rs  passes.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: add.rs  build.rs  deps.rs  fmt.rs  init.rs  mod.rs  remove.rs  run.rs  test.rs  update.rs  watch.rs
crates/codegen-cranelift/: Cargo.toml
crates/codegen-cranelift/src/: backend.rs  lib.rs  translator.rs
crates/codegen-cranelift/src/translator/: helpers.rs  mod.rs
crates/codegen-cranelift/tests/: aot_e2e.rs
crates/common/: Cargo.toml
crates/common/src/: diagnostic.rs  error.rs  lib.rs  span.rs  types.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: ast.rs  checker.rs  compiler.rs  lexer.rs  lib.rs  lowerer.rs  parser.rs  resolver.rs  traits.rs
crates/frontend/src/lowerer/: expr.rs  helpers.rs  mod.rs  stmt.rs  tests.rs
crates/frontend/src/parser/: class.rs  expr.rs  mod.rs  stmt.rs  types.rs
crates/hcl/: Cargo.toml
crates/hcl/src/: lib.rs  parser.rs  writer.rs
crates/heap/: Cargo.toml
crates/heap/src/: gc.rs  heap.rs  klass.rs  lib.rs  object.rs
crates/micrort/: Cargo.toml
crates/micrort/src/: builtins.rs  bytecode.rs  classfile.rs  interpreter.rs  lib.rs  loader.rs  lowerer_hash.rs  reflection.rs  rir_interp.rs  verifier.rs
crates/micrort/src/builtins/: collections.rs  concurrent.rs  format.rs  io.rs  math.rs  mod.rs  network.rs  numbers.rs  reflect.rs  regex.rs  scanner.rs  string.rs  system.rs  time.rs
crates/micrort/src/rir_interp/: helpers.rs  interp.rs  mod.rs  objects.rs  rval.rs
crates/micrort/tests/: e2e.rs
crates/pkg/: Cargo.toml
crates/pkg/src/: config.rs  lib.rs  lockfile.rs  pom.rs  registry.rs  resolver.rs  shortname.rs
crates/rir/: Cargo.toml
crates/rir/src/: instr.rs  lib.rs  metadata.rs  module.rs  types.rs
crates/rt/: Cargo.toml  build.rs
crates/rt/src/: lib.c  lib.rs
docs/: assignment-in-condition-investigation.md  java-coverage-development-plan.md  known-limitations.md  rava.md
examples/aot/: Arrays.expected  Arrays.java  MixedOutput.expected  MixedOutput.java  Objects.expected  Objects.java  StringConcat.expected  StringConcat.java
examples/basics/: Arithmetic.java  StringOps.expected  StringOps.java
examples/control-flow/: Fibonacci.java  FizzBuzz.java  ForLoop.java  ForLoop2.java  WhileAssign.java  WhileLoop.java
examples/imports/: expected.txt  rava.hcl
examples/imports/src/: Main.java
examples/imports/src/util/: MathHelper.java
examples/methods/: Factorial.java  StaticMethods.expected  StaticMethods.java
examples/multifile/: expected.txt  rava.hcl
examples/multifile/src/: Main.java  Point.java
examples/new-syntax/: BitwiseOps.expected  BitwiseOps.java  BreakContinue.java  CatchTypeTest.expected  CatchTypeTest.java  CharLiterals.expected  CharLiterals.java  CollectionsSortTest.expected  CollectionsSortTest.java  CompoundAssign.java  DoWhileLoop.java  DoWhileTest.expected  DoWhileTest.java  ExceptionMethodTest.expected  ExceptionMethodTest.java  FloatArithmetic.expected  FloatArithmetic.java  ForEachLoop.java  FormatTest.expected  FormatTest.java  GenericsTest.expected  GenericsTest.java  HexBinary.expected  HexBinary.java  IteratorTest.expected  IteratorTest.java  LabeledBreak.expected  LabeledBreak.java  LambdaTest.expected  LambdaTest.java  ListOfTest.expected  ListOfTest.java  MultiArrayTest.expected  MultiArrayTest.java  MultiCaseTest.expected  MultiCaseTest.java  NestedArrayTest.expected  NestedArrayTest.java  RecordTest.java  SealedTest.java  (+21 more)
examples/oop/: AnonymousClassTest.expected  AnonymousClassTest.java  ArrayListTest.expected  ArrayListTest.java  ChainTest.java  ClassFields.expected  ClassFields.java  ConstructorChainTest.expected  ConstructorChainTest.java  DefaultMethodTest.java  DefaultMethodTest2.expected  DefaultMethodTest2.java  EnumFieldTest.expected  EnumFieldTest.java  EnumMethodTest.java  EnumMethodTest2.expected  EnumMethodTest2.java  EnumTest.expected  EnumTest.java  HashMapIterTest.java  HashMapTest.expected  HashMapTest.java  InheritanceTest.java  LinkedList.java  MethodOverload.java  MultipleClasses.java  PrintfTest.expected  PrintfTest.java  StaticInnerTest.java  StringBuilderTest.expected  StringBuilderTest.java  VirtualDispatchTest.expected  VirtualDispatchTest.java
examples/stdlib/: expected.txt  rava.hcl
examples/stdlib/src/: Main.java
runtime/: rava_rt.c
stdlib/java/util/: Arrays.java  Collections.java
