[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/rir",
    "crates/heap",
    "crates/frontend",
    "crates/aot",
    "crates/codegen-cranelift",
    "crates/micrort",
    "crates/hcl",
    "crates/pkg",
    "crates/cli",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["A3S Team"]
license     = "MIT"
repository  = "https://github.com/A3S-Lab/rava"
rust-version = "1.82"

[workspace.dependencies]
# Internal crates
rava-common            = { path = "crates/common" }
rava-rir               = { path = "crates/rir" }
rava-heap              = { path = "crates/heap" }
rava-frontend          = { path = "crates/frontend" }
rava-aot               = { path = "crates/aot" }
rava-codegen-cranelift = { path = "crates/codegen-cranelift" }
rava-micrort           = { path = "crates/micrort" }
rava-hcl               = { path = "crates/hcl" }
rava-pkg               = { path = "crates/pkg" }

# Error handling
thiserror = "2"
anyhow    = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Config (HCL)
hcl-rs = "0.18"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
