[package]
name        = "rava"
description = "Rava CLI — Java AOT compiler and all-in-one toolchain"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true

[[bin]]
name = "rava"
path = "src/main.rs"

[features]
default = ["aot", "pkg"]
aot     = ["dep:rava-codegen-cranelift", "dep:rava-aot"]
pkg     = ["dep:rava-pkg", "dep:reqwest"]

[dependencies]
rava-common            = { workspace = true }
rava-frontend          = { workspace = true }
rava-micrort           = { workspace = true }
rava-aot               = { workspace = true, optional = true }
rava-codegen-cranelift = { workspace = true, optional = true }
rava-pkg               = { workspace = true, optional = true }
rava-hcl               = { workspace = true }
reqwest                = { workspace = true, optional = true }
clap                   = { workspace = true }
anyhow                 = { workspace = true }
tracing                = { workspace = true }
tracing-subscriber     = { workspace = true }
