[package]
name        = "rava-hcl"
description = "HCL parsing and generation for rava.hcl and rava.lock"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
rava-common = { workspace = true }
thiserror   = { workspace = true }
hcl-rs      = { workspace = true }
serde       = { workspace = true }
